--- a/21-Geolocation/index.html
+++ b/21-Geolocation/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+  <a href="../index.html" class="home__button">Home</a>
   <svg class="arrow" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px"
     y="0px" viewBox="0 0 64 64" enable-background="new 0 0 64 64" xml:space="preserve">
     <g>
