--- a/22-FollowAlongLinkHighlighter/index.html
+++ b/22-FollowAlongLinkHighlighter/index.html
@@ -11,7 +11,7 @@
 
   <nav>
     <ul class="menu">
-      <li><a href="">Home</a></li>
+      <li><a href="../index.html">Home</a></li>
       <li><a href="">Order Status</a></li>
       <li><a href="">Tweets</a></li>
       <li><a href="">Read Our History</a></li>
